5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1638_651.log
== TEST (2019-04-13 21:05:04) 
-- CODE:
x=float(input("altura: "))
y=input("sexo(M ou F)")

if(y.upper()=="M"):
	print((72.2*x)-58)
else:
	print((62.1*x)-44,7)
-- OUTPUT:
18.1 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:07:05) 
-- CODE:
x=float(input("altura: "))
y=input("sexo(M ou F)")

if(y.upper()=="M"):
	print(round((72.2*x-58),2)
else:
	print(round((62.1*x -44.7),2)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:07:49) 
-- CODE:
x=float(input("altura: "))
y=input("sexo(M ou F)")

if(y.upper()=="M"):
	print(round(72.2*x-58,2)
else:
	print(round(62.1*x -44.7,2)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:07:58) 
-- CODE:
x=float(input("altura: "))
y=input("sexo(M ou F)")

if(y.upper()=="M"):
	print(round(72.2*x-58,2)
else:
	print(round(62.1*x -44.7,2)
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:09:03) 
-- CODE:
x=float(input("altura: "))
y=input("sexo(M ou F)")

if(y.upper()=="M"):
	print(round((72.2*x-58),2))
else:
	print(round((62.1*x -44.7),2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:09:30) 
-- CODE:
x=float(input("altura: "))
y=input("sexo(M ou F)")

if(y.upper()=="M"):
	print(round((72.2*x-58),2))
else:
	print(round((62.1*x -44.7),2))
-- EXECUTION TIME:
0.189032
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.09
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:10:03) 
-- CODE:
x=float(input("altura: "))
y=input("sexo(M ou F)")

if(y.upper()=="M"):
	print(round(((72.2*x)-58),2))
else:
	print(round(((62.1*x) - 44.7),2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:12:16) 
-- CODE:
x=float(input("altura: "))
y=input("sexo(M ou F)")

if(y.upper()=="M"):
	print(round(72.7*x-58,2))
else:
	print(round(62.1*x-44.7,2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:12:35) 
-- CODE:
x=float(input("altura: "))
y=input("sexo(M ou F)")

if(y.upper()=="M"):
	print(round(72.7*x-58,2))
else:
	print(round(62.1*x-44.7,2))
-- EXECUTION TIME:
0.181799
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
